@startuml

hide circle
skinparam classAttributeIconSize 0

abstract class "{abstract} \n Command"
package parser {
    class Parser
    class AddCommandParser
    class DeleteCommandParser
    class DoneCommandParser
    class EditCommandParser
    class ListCommandParser
    class CapCommandParser
    class GradeCommandParser
    class HelpCommandParser
    class LessonParser
    class TimeTableCommandParser
}
parser .left.> "{abstract} \n Command" : All Parser classes\ngenerate Command objects

Parser .left.> AddCommandParser :  All Parser "subclasses" do not\ninherit from Parser
Parser .right.> HelpCommandParser
Parser ..> DeleteCommandParser
Parser ...> DoneCommandParser
Parser ....> EditCommandParser
Parser ...> ListCommandParser
Parser ..> CapCommandParser
Parser ....> GradeCommandParser
Parser ...> LessonParser
Parser ....> TimeTableCommandParser

@enduml